# autoencoder-image-restoration

./: .gitignore  README.md  bingdownloadimagespython.ipynb  data_file.json  plan.md  pyproject.toml  requirements.lock.txt  requirements.txt
scripts/: build_dataset.py
src/autoencoders/: config.py
src/autoencoders/data_preprocessing/: __init__.py  blank_check.py  dedup_and_integrity.py  extension_filter.py  pipeline.py  preprocessing.md  resize_and_crop.py  save.py  split.py  stats.py  validate_and_normalize.py
